# HueShift

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Commons/: ColorUtils.hpp  HardwareListener.hpp  ParameterNaming.hpp
Source/DSP/: MidiHandler.hpp
Source/GUI/: Camera.h  CameraGrid.hpp  CameraSelector.hpp  NetworkDisplay.hpp
